continuando texto dos tnos

--- a/qualify/Qualify-altair.tex
+++ b/qualify/Qualify-altair.tex
@@ -471,8 +471,27 @@ Um pedido de tempo foi feito para o telescópio Zeiss para se tentar observar um
 
 \indent \indent Como dito no Cap. \ref{Cap: intro}, os objetos do sistema solar exterior podem ser considerados fósseis do sistema solar. Dentre esses, os TNOs, por estarem mais distantes, são os que guardam as informações mais antigas. Ainda é incerta a distribuição de tamanhos dos TNOs e pouco se conhece sobre suas composições, estruturas internas, presença de atmosfera, densidade, etc.
 
-Com o objetivo de obter os parâmetro físicos desses objetos uma grande campanha observacional é realizada para se observar ocultações estelares por TNOs e Centauros. Essa campanha é liderada por pesquisadores brasileiros, franceses e espanhóis e tem colaboração com observadores espalhados por todo o mundo.
+Com o objetivo de obter os parâmetro físicos desses objetos uma grande campanha observacional é realizada para se observar ocultações estelares por TNOs e Centauros (a partir daqui, "TNOs" se referem a TNOs e Centauros). Essa campanha é liderada por pesquisadores brasileiros, franceses e espanhóis e tem colaboração com observadores espalhados por todo o mundo.
 
+Assim como para os satélites irregulares, observar uma ocultação exige um grande trabalho de predição e sua melhoria. Os TNOs estão muito distantes significando que erros pequenos em sua posição ou na posição da estrela podem significar um erro do local onde a sombra irá passar de muitos quilômetros. Preferencialmente, esse erro tem que ser menor que o tamanho angular do objeto no plano do céu. Por exemplo, Plutão tem um raio de $1190 \pm 5$ km \cite[em preparação]{DiasOliveira2015} que a uma distância de aproximadamente 32 UA representam um diâmetro angular de 102 mas. Para a maioria dos objetos selecionados, menores que Plutão e/ou mais distantes, seus tamanhos angulares são manores que 50 mas.
+
+Da mesma forma, estando muito distantes, eles se movem pouco no céu ocultando poucas esrelas, porém sendo menos brilhantes (Mag V > 18) é possível observar ocultações de estrelas mais fracas, onde a queda de brilho da estrela durante a ocultação poderá ser detectada com baixo sinal-ruído.
+
+Para identificar candidatas a ocultações estelares foi realizado uma campanha observacional no ESO para observar os caminhos aparentes dos TNOs entre 2009 e 2015. As observações foram feitas com o telescópio de 2.2 m e o detector mosaico WFI. Posições para estrelas até magnitude R=21, com nível de completeza em R=19, foram obtidas com precisões menores que 20 mas até R=20 \citep{Assafin2012}. Assim, estrelas que não estão no UCAC4, catálogo comumente utilizado como referência astrométrica, foram identificados bem como estrelas que estão mas não tem posições ou movimentos próprios com precisão suficiente. Tantos os catálogos de estrelas quanto as cadidatas a ocultação foram publicados em periódicos \citep{Assafin2010, Assafin2012, Camargo2013}.
+
+Não somente as posições das estrelas precisam ser atualizadas, mas também as posições dos TNOs. Portanto os TNOs também foram observados tanto no ESO quanto No Observatório do Pico dos Dias. À princípio as predições das ocultações eram atualizadas utilizando o método de offsets, porém, em colaboração, integrações numéricas das órbitas dos TNOs foram realizadas desenvolvendo-se uma ferramenta denominada NIMA\footnote{Numerical Integration of the Motion of an Asteroid} \citep[submetido]{Desmars2015}.
+
+Nesse trabalho, posições obtidas de ocultações já realizadas tem um peso muito maior que as restantes, diferentemente do que é feito pelo JPL. Da mesma forma, noites em que houveram um número de observações maior que as restantes terá um peso moderado já que se fosse utilizado um peso individual, o peso final de uma noite poderia estar superestimado levando a um erro na integração. Neste trabalho contribuí com observações de TNOs feitas no OPD.
+
+Vários objetos já foram observados pelo grupo, sendo que o Sistema Plutão-Caronte conta com várias ocultações observadas. Essa trabalho já gerou diversas publicações, incluindo na revista Nature, por exemplo \cite{Sicardy2011} e \cite{BragaRibas2014} nas quais contribuí em caráter observacional. A ocultação de Plutão de 04 de Maio de 2013, a qual observei, gerou duas publicações \citep{Olkin2015, DiasOliveira2015}.
+
+\cite{Sicardy2011} identificaram, a partir de uma ocultação de 06 de Novembro de 2010, que Eris é um planeta anão menor do que se esperava. Devido a seu brilho e distância acreditava-se que ele fosse muito maior, mas na verdade ele tem um albedo geométrico no visível de $p_v=0.96^{+0.09}_{-0.04}$ e que seu tamanho é de $1163 \pm 6$ km, muito próximo ao tamanho de Plutão. O alto albedo de Eris pode ser relacionada à presença de uma atmosfera colapsada devido ao fato dele estar se aproximando de seu afélio.
+
+\cite{BragaRibas2014} observaram uma ocultação do Centauro Chariklo que ocorreu dia 03 de Junho de 2013. O ocultação revelou que o objeto possui um sistema de anéis nunca visto antes em um objeto tão pequeno. Até o momento, conhecia-se apenas anéis em torno dos planetas gigantes. Essa descoberta levanta muitas questão sobre formação dos anéis, estabilididade ou tempo de vida e nos leva a crer que pode haver mais objetos com anéis no sistema solar.
+
+\cite{Olkin2015} determinaram a partir de observações de ocultações por Plutão que a atmosfera do objeto não colapsa durante os 248 anos de sua órbita, como acontece com Eris. Modelos anteriores previam um colapso de sua atmosfera devido a Plutão receber três vezes menos lus do Sol em afélio que em seu periélio.
+
+\cite{DiasOliveira2015} também a partir de ocultações de Plutão utilizaram modelos para obter os perfis de temperatura, pressão e densidade da atmosfera do objeto. Os modelos ajustam perfeitamente os perfis de temperatura para as duas ocultações utilizadas assumindo uma atmosfera esfericamente simétrica. Foi obtido que a pressão da atmosfera aumentou cerca de 6\% entre 2012 e 2013 significando que a atmosfera de Plutão ainda está se expandindo e confirmando o trabalho de \cite{Olkin2015}.
 
 
 
