--- a/qualify/Referencias.bib
+++ b/qualify/Referencias.bib
@@ -288,6 +288,19 @@ month={Jul},
 pages={395–401}
 }
 
+@article{Assafin2010,
+title={\href{http://dx.doi.org/10.1051/0004-6361/200913690}{Precise predictions of stellar occultations by Pluto, Charon, Nix, and Hydra for 2008–2015}},
+volume={515},
+url={http://dx.doi.org/10.1051/0004-6361/200913690},
+DOI={10.1051/0004-6361/200913690},
+journal={Astronomy and Astrophysics},
+publisher={EDP Sciences},
+author={Assafin, M. and Camargo, J. I. B. and Vieira Martins, R. and others},
+year={2010},
+month={Jun},
+pages={A32}
+}
+
 @Article{Sicardy2011,
 title={\href{http://dx.doi.org/10.1038/nature10550}{A Pluto-like radius and a high albedo for the dwarf planet Eris from an occultation}},
 volume={478},
@@ -309,6 +322,20 @@ year = {2011},
 page = {85},
 }
 
+@article{Ortiz2012,
+title={\href{http://dx.doi.org/10.1038/nature11597}{Albedo and atmospheric constraints of dwarf planet Makemake from a stellar occultation}},
+volume={491},
+url={http://dx.doi.org/10.1038/nature11597},
+DOI={10.1038/nature11597},
+number={7425},
+journal={Nature},
+publisher={Nature Publishing Group},
+author={Ortiz, J. L. and Sicardy, B. and Braga-Ribas, F. and others},
+year={2012},
+month={Nov},
+pages={566–569}
+}
+
 @Article{Jacobson2012,
 title={\href{http://dx.doi.org/10.1088/0004-6256/144/5/132}{IRREGULAR SATELLITES OF THE OUTER PLANETS: ORBITAL UNCERTAINTIES AND ASTROMETRIC RECOVERIES IN 2009–2011}},
 volume={144},
@@ -321,6 +348,19 @@ author={Jacobson, R. and Brozović, M. and Gladman, B. and others},
 year={2012},
 month={Oct},
 pages={132}
+}
+
+@article{Assafin2012,
+title={\href{http://dx.doi.org/10.1051/0004-6361/201118349}{Candidate stellar occultations by large trans-Neptunian objects up to 2015}},
+volume={541},
+url={http://dx.doi.org/10.1051/0004-6361/201118349},
+DOI={10.1051/0004-6361/201118349},
+journal={Astronomy and Astrophysics},
+publisher={EDP Sciences},
+author={Assafin, M. and Camargo, J. I. B. and Vieira Martins, R. and others},
+year={2012},
+month={May},
+pages={A142}
 }
 
 @InProceedings{McKinnon2012,
@@ -360,6 +400,19 @@ month={Jul},
 pages={26}
 }
 
+@article{Camargo2013,
+title={\href{http://dx.doi.org/10.1051/0004-6361/201322579}{Candidate stellar occultations by Centaurs and trans-Neptunian objects up to 2014}},
+volume={561},
+url={http://dx.doi.org/10.1051/0004-6361/201322579},
+DOI={10.1051/0004-6361/201322579},
+journal={Astronomy and Astrophysics},
+publisher={EDP Sciences},
+author={Camargo, J. I. B. and Vieira-Martins, R. and Assafin, M. and others},
+year={2013},
+month={Dec},
+pages={A37}
+}
+
 @Article{Drummond2014,
 title={\href{http://dx.doi.org/10.1016/j.icarus.2014.03.038}{Dwarf planet Ceres: Ellipsoid dimensions and rotational pole from Keck and VLT adaptive optics images}},
 volume={236},
@@ -394,6 +447,33 @@ month={Feb},
 pages={22}
 }
 
+@article{BragaRibas2014,
+title={\href{http://dx.doi.org/10.1038/nature13155}{A ring system detected around the Centaur (10199) Chariklo}},
+volume={508},
+url={http://dx.doi.org/10.1038/nature13155},
+DOI={10.1038/nature13155},
+number={7494},
+journal={Nature},
+publisher={Nature Publishing Group},
+author={Braga-Ribas, F. and Sicardy, B. and Ortiz, J. L. and others},
+year={2014},
+month={Mar},
+pages={72–75}
+}
+
+@article{Olkin2015,
+title={Evidence that Pluto’s atmosphere does not collapse from occultations including the 2013 May 04 event},
+volume={246},
+url={http://dx.doi.org/10.1016/j.icarus.2014.03.026},
+DOI={10.1016/j.icarus.2014.03.026},
+journal={Icarus},
+publisher={Elsevier BV},
+author={Olkin, C.B. and Young, L.A. and Borncamp, D. and others},
+year={2015},
+month={Jan},
+pages={220–225}
+}
+
 @Article{GomesJunior2015-Ceres,
 author = {Gomes-Júnior, A. R. and Giacchini, B. L. and Braga-Ribas, F. and others},
 title = {\href{http://arxiv.org/abs/1504.04902}{Results of two multi-chord stellar occultations by dwarf planet (1) Ceres}},
@@ -407,10 +487,26 @@ year = {2015},
 title={\href{http://dx.doi.org/10.1051/0004-6361/201526273}{Astrometric positions for 18 irregular satellites of giant planets from 23 years of observations}},
 url={http://dx.doi.org/10.1051/0004-6361/201526273},
 DOI={10.1051/0004-6361/201526273},
-journal={Astronomy \& Astrophysics},
+journal={Astronomy and Astrophysics},
 publisher={EDP Sciences},
 author={A. R. Gomes-Júnior and M. Assafin and R. Vieira-Martins and J.-E. Arlot and others},
 year={2015},
 month={Jun},
 note={aceito}
+}
+
+@Article{DiasOliveira2015,
+author = {Dias-Oliveira, A. and Sicardy, B. and Lellouch, E. and others},
+title = {Pluto’s atmosphere from stellar occultations in 2012 and 2013},
+journal = {The Astrophysical Journal},
+note = {submetido},
+year = {2015},
+}
+
+@Article{Desmars2015,
+author = {Desmars, J. and Camargo, J.I.B. and Braga-Ribas, F. and others},
+title = {Orbit determination of trans-Neptunian objects and Centaurs for the prediction of stellar occultations},
+journal = {Astronomy and Astrophysics},
+note = {submetido},
+year = {2015},
 }
