Terminado parte  ocultações de TNOs

--- a/qualify/Qualify-altair.tex
+++ b/qualify/Qualify-altair.tex
@@ -111,12 +111,12 @@
 \indent \indent O estudo de objetos como TNOs, Centauros e Satélites Irregulares (remanescentes relativamente inalterados da formação do sistema solar) nos ajudam a compreender a formação e evolução do Sistema Solar. Atualmente, é aceito que TNOs e Centauros tenham sido formados nas partes mais internas do sistema solar. Eles teriam então sido colocados em suas posições atuais devido a troca de momento angular entre os planetas e planetésimos quando da migração dos planetas gigantes. A evolução se deu de tal forma que a passagem dos planetesimais e planetas por zonas de ressonância de movimento médio redefiniu as órbitas desses corpos \citep{Tsiganis2005}.\\
 \indent Sabe-se que poucas sondas espaciais foram enviados para estudar o Sistema Solar Externo e que a quantidade de objetos estudados é muito pequena. Por isso, ainda hoje, as observações de solo tem se mostrado de grande importância.\\
 \indent Os sistemas de Júpiter e Saturno já foram pelas Voyager I e II, Galileu (Júpiter) e Cassini (Saturno), porém apenas Saturno continua sendo investigado por uma sonda. Porém as sondas observaram apenas os planetas, os anéis e satélites mais internos. Os satélites externos, que acredita-se ser oriundo de capturas ou foram pouco observados (como Phoebe) ou simplesmente não foram observados.\\
-\indent Já no caso de Urano e Netuno, nenhuma sonda exclusiva foi enviada, apenas as Voyagers I e II os visitaram, mas não permaneceram nos sistemas. A sonda New Horizons visitará Plutão em 2015 e obterá parâmetros físicos para Plutão e seus satélites (primeira visita por sonda a um satélite do cinturão de Kuiper), porém será uma passagem rápida e o acompanhamento da evolução do sistema, incluindo a evolução da atmosfera de Plutão se dará por observações de solo.\\
+\indent Já no caso de Urano e Netuno, nenhuma sonda exclusiva foi enviada, apenas as Voyagers I e II os visitaram, mas não permaneceram nos sistemas. A sonda New Horizons já está próxima a Plutão e obterá parâmetros físicos para Plutão e seus satélites (primeira visita por sonda a um objeto do cinturão de Kuiper), porém será uma passagem rápida e o acompanhamento da evolução do sistema, incluindo a evolução da atmosfera de Plutão se dará por observações de solo.\\
 \indent A quantidade de objetos descobertos além da órbita de Saturno tem aumentado muito desde o fim do século passado. Como são raras as oportunidades em que uma sonda se aproxima desses objetos, a obtenção de suas características físicas ficam a cargo de observações de solo ou de
 telescópios espaciais.\\
 \indent Um método que tem se mostrado eficiente para a obtenção desses parâmetros é o métodode ocultações estelares, que proporciona medidas tão precisas que são apenas superadas por medidas oriundas de sondas.
 
-\chapter{Astrometria dos sat\'elites irregulares dos planetas gigantes}
+\chapter{Astrometria dos satélites irregulares dos planetas gigantes}
 \label{Cap: Irr-astrometria}
 
 \indent \indent Os satélites irregulares dos planetas gigantes são menores que as regulares, possuindo órbitas mais excêntricas, inclinadas e distantes. Na maioria dos casos, essas órbitas são retrógradas. Devido suas configurações orbitais, é altamente aceito que estes objetos foram capturados nos estágios iniciais da formação do sistema solar \citep{Sheppard2003}.
@@ -205,6 +205,24 @@ Um método que tem se mostrado eficiente para a obtenção desses parâmetros é
 
 \chapter{Ocultações Estelares}
 \label{Cap: observacoes}
+
+\indent \indent Ocultação estelar é um evento que ocorre quando um objeto do sistema solar passa na frente de uma estrela de forma que o brilho da estrela é completamente ou parcialmente apagado durante um intervalo de tempo. A variação de brilho da estrela pode ser medido fazendo-se observações com exposições curtas. O produto gerado é uma curva de luz luminosidade x tempo. Essa técnica pode ser utilizada para se obter parâmetros físicos dos objetos ocultantes como tamanho, densidade, detecção da presença de atmosfera, satélites ou anéis, etc \citep{Elliot1979}.
+
+A Fig. \ref{Fig: occ-scheme}.1 mostra uma curva de luz esquemática de uma ocultação estelar central por um planeta com atmosfera e anéis. Ao ocultar a estrela, os anéis passarão primeiro, a densidade do anel, tamanho e tempo de exposição determinará a queda de brilho da estrela. Ao chegar no corpo principal, caso não possua atmosfera, a queda de brilho será abrupta, caso possua, a queda de brilho será mais suave devido à refração da luz da estrela na atmosfera dificultando a determinação da superfície do objeto.
+
+\begin{figure}[h]
+\begin{centering}
+\includegraphics[scale=0.75]{figuras/stellarocc.png} 
+\label{Fig: occ-scheme}
+\caption{Curva de luz esquemática de uma ocultação estelar por um planeta com atmosfera e anéis. Fonte: \cite{Elliot1979}}
+\end{centering} 
+\end{figure}
+
+A suavidade da curva portanto será determinada pelo gradiente de temperatura, pressão e densidade da atmosfera, presença de nuvens, etc. A luz da estrela nunca será completamente apagada quando ocultada por um objeto com atmosfera devido à refração da luz na atmosfera onde parte dela convergirá na direção do observador. Caso a ocultação seja central para o observador haverá um aumento de brilho no meio do evento pois a convergência da luz será máxima. A atmosfera, no caso, agiria como uma lente como mostrado na Fig. \ref{Fig: occ-scheme}.1.
+
+Quando o evento é observado por diversos telescópios espalhados, cada observador verá a ocultação em latitudes diferentes. Essas diversas curvas de luz permitirá reconstruir a forma do objeto possivelmente identificando estruturas superficiais como montanhas e crateras. Como a estrela está muito distante, podendo ser considerada quase pontual, a sombra do objeto durante a ocultação é muito próximo ao seu tamanho real.
+
+Para se observar esses eventos, portanto, é necessário uma campanha grande com observadores espalhados por várias regiões para cobrir a sombra do objeto. A precisão nas posições da estrela e do objeto são cruciais pois o evento ocorre em instantes específicos e passará por regiões específicas da Terra alheias à escolha do observador.
 
 %Since their ephemerides are not very precise, predicting and observing stellar occultations are very difficult, and no observation of such an event for an irregular satellite is found in the literature. The precise star positions to be derived by the ESA astrometry satellite Gaia \citep{deBruijne2012} will render better predictions with the only source of error being the ephemeris. The positions derived from our observations can be used in new orbital numerical integrations, generating more precise ephemerides.
 
@@ -387,7 +405,7 @@ $959 \pm 5$  & $0.05  \pm 0.01$  & Occultação & 5\\
 \section{Satélites Irregulares}
 \label{Sec: Irregulares}
 
-\subsection{Prediç\~ao das ocultaç\~oes}
+\subsection{Predição das ocultações}
 \label{Subsec: Irr-predic}
 
 \indent \indent Com o objetivo de obter parâmetros físicos para os satélites irregulares com maior precisão foram feitas predições de ocultações estelares para os 7 maiores satélites de Júpiter, o satélite Phoebe de Saturno e Nereida de Netuno. Esses objetos são pequenos (ver Tabela \ref{Tab: comparison-horizons}), se comparados aos TNOs e Centauros estudados na seção \ref{Sec: TNO-occ}, sendo que o menor dos satélites da amostra, Ananke, possui aproximadamente 28 km.
@@ -489,9 +507,17 @@ Vários objetos já foram observados pelo grupo, sendo que o Sistema Plutão-Car
 
 \cite{BragaRibas2014} observaram uma ocultação do Centauro Chariklo que ocorreu dia 03 de Junho de 2013. O ocultação revelou que o objeto possui um sistema de anéis nunca visto antes em um objeto tão pequeno. Até o momento, conhecia-se apenas anéis em torno dos planetas gigantes. Essa descoberta levanta muitas questão sobre formação dos anéis, estabilididade ou tempo de vida e nos leva a crer que pode haver mais objetos com anéis no sistema solar.
 
-\cite{Olkin2015} determinaram a partir de observações de ocultações por Plutão que a atmosfera do objeto não colapsa durante os 248 anos de sua órbita, como acontece com Eris. Modelos anteriores previam um colapso de sua atmosfera devido a Plutão receber três vezes menos lus do Sol em afélio que em seu periélio.
+\cite{Olkin2015} determinaram a partir de observações de ocultações por Plutão que a atmosfera do objeto não colapsa durante os 248 anos de sua órbita, como acontece com Eris. Modelos anteriores previam um colapso de sua atmosfera devido a Plutão receber três vezes menos luz do Sol em afélio que em seu periélio.
 
-\cite{DiasOliveira2015} também a partir de ocultações de Plutão utilizaram modelos para obter os perfis de temperatura, pressão e densidade da atmosfera do objeto. Os modelos ajustam perfeitamente os perfis de temperatura para as duas ocultações utilizadas assumindo uma atmosfera esfericamente simétrica. Foi obtido que a pressão da atmosfera aumentou cerca de 6\% entre 2012 e 2013 significando que a atmosfera de Plutão ainda está se expandindo e confirmando o trabalho de \cite{Olkin2015}.
+\cite{DiasOliveira2015}, também a partir de ocultações de Plutão, utilizaram modelos para obter os perfis de temperatura, pressão e densidade da atmosfera do objeto. Os modelos ajustam perfeitamente os perfis de temperatura para as duas ocultações utilizadas assumindo uma atmosfera esfericamente simétrica. Foi obtido que a pressão da atmosfera aumentou cerca de 6\% entre 2012 e 2013 significando que a atmosfera de Plutão ainda está se expandindo e confirmando o trabalho de \cite{Olkin2015}.
+
+No dia 29 de Junho de 2015 haverá uma ocultação de Plutão de máxima importância. Será a última antes da chegada da sonda \textit{New Horizons} no sistema e poderá ser observada na Austrália. Observada a ocultação, os modelos de perfil de atmosfera para Plutão poderão ser calibrados com os dados da \textit{New Horizons} para serem utilizadas em futuras ocultações e estudar a evolução da atmosfera do planeta anão.
+
+Em 29 de Abril de 2014, uma ocultação de Chariklo foi observada na África. Eu trabalhei com a redução de três curvas de luz (Gifberb, SAAO e Springbok). Um fato interessante dessa ocultação foi que a estrela era uma binária não catalogada. Como a segunda estrela era bem mais fraca, acreditava-se que poderia ser algum material próximo à Chariklo.
+
+Essa ocultação foi importante para obter com total certeza a direção do pólo de Chariklo. Além disso, as câmeras utilizadas eram de alta qualidade possibilitando obter que pelo menos um dos anéis é opaco. Uma das cordas, fortuitamente, passou contígua ao anel observando apenas o anel externo. Os resultados ainda não foram publicados.
+
+Outro evento que observei foi uma ocultação de 2003VS2 dia 07 de Novembro de 2014 no OPD. As variações do céu não permitiram uma boa observação de forma que a curva de luz estava muito variada com instantes de tempo bom próximos ao instante do evento. Um trabalho foi feito para identificar alguma ocultação mas nada pôde ser extraído. O trabalho ainda está em análise.
 
 
 
