--- a/qualify/Referencias.bib
+++ b/qualify/Referencias.bib
@@ -12,6 +12,20 @@ month={Apr},
 pages={612–620}
 }
 
+@article{Elliot1979,
+title={\href{http://dx.doi.org/10.1146/annurev.aa.17.090179.002305}{Stellar Occultation Studies of the Solar System}},
+volume={17},
+url={http://dx.doi.org/10.1146/annurev.aa.17.090179.002305},
+DOI={10.1146/annurev.aa.17.090179.002305},
+number={1},
+journal={Annual Review of Astronomy and Astrophysics},
+publisher={Annual Reviews},
+author={Elliot, James L.},
+year={1979},
+month={Sep},
+pages={445–475}
+}
+
 @Article{Millis1987,
 title={\href{http://dx.doi.org/10.1016/0019-1035(87)90048-0}{The size, shape, density, and Albedo of Ceres from its occultation of BD+8°471}},
 volume={72},
@@ -233,7 +247,7 @@ pages={267–285}
 }
 
 @article{Nesvorny2007,
-title={Capture of Irregular Satellites during Planetary Encounters},
+title={\href{http://dx.doi.org/10.1086/512850}{Capture of Irregular Satellites during Planetary Encounters}},
 volume={133},
 url={http://dx.doi.org/10.1086/512850},
 DOI={10.1086/512850},
@@ -462,7 +476,7 @@ pages={72–75}
 }
 
 @article{Olkin2015,
-title={Evidence that Pluto’s atmosphere does not collapse from occultations including the 2013 May 04 event},
+title={\href{http://dx.doi.org/10.1016/j.icarus.2014.03.026}{Evidence that Pluto’s atmosphere does not collapse from occultations including the 2013 May 04 event}},
 volume={246},
 url={http://dx.doi.org/10.1016/j.icarus.2014.03.026},
 DOI={10.1016/j.icarus.2014.03.026},
