Aumentei a introdução e fiz o começo da astrometria

--- a/qualify/Referencias.bib
+++ b/qualify/Referencias.bib
@@ -54,6 +54,20 @@ month={Dec},
 pages={1422–1449}
 }
 
+@article{Jewitt1993,
+title={\href{http://dx.doi.org/10.1038/362730a0}{Discovery of the candidate Kuiper belt object 1992 QB1}},
+volume={362},
+url={http://dx.doi.org/10.1038/362730a0},
+DOI={10.1038/362730a0},
+number={6422},
+journal={Nature},
+publisher={Nature Publishing Group},
+author={Jewitt, David and Luu, Jane},
+year={1993},
+month={Apr},
+pages={730–732}
+}
+
 @Misc{Giorgini1996,
 title = {JPL's On-Line Solar System Data Service},
 author = {Giorgini, J.D. and Yeomans, D.K. and Chamberlin, A.B. and others},
@@ -76,6 +90,20 @@ author={Rettig, T},
 year={2001},
 month={Dec},
 pages={313–320}
+}
+
+@article{Fernandez2002,
+title={\href{http://dx.doi.org/10.1086/338436}{Thermal Properties of Centaurs Asbolus and Chiron}},
+volume={123},
+url={http://dx.doi.org/10.1086/338436},
+DOI={10.1086/338436},
+number={2},
+journal={The Astronomical Journal},
+publisher={IOP Publishing},
+author={Fernández, Yanga R. and Jewitt, David C. and Sheppard, Scott S.},
+year={2002},
+month={Feb},
+pages={1050–1055}
 }
 
 @ARTICLE{Sheppard2003,
@@ -128,7 +156,7 @@ DOI={10.1086/375461},
 number={1},
 journal={AJ},
 publisher={IOP Publishing},
-author={Nesvorn, David and Alvarellos, Jose L. A. and Dones, Luke and Levison, Harold F.},
+author={Nesvorný, David and Alvarellos, Jose L. A. and Dones, Luke and Levison, Harold F.},
 year={2003},
 month={Jul},
 pages={398–429}
@@ -142,7 +170,7 @@ DOI={10.1086/382099},
 number={3},
 journal={AJ},
 publisher={IOP Publishing},
-author={Nesvorn, David and Beaugé, Cristian and Dones, Luke},
+author={Nesvorný, David and Beaugé, Cristian and Dones, Luke},
 year={2004},
 month={Mar},
 pages={1768–1783}
@@ -258,6 +286,17 @@ author={Nesvorný, David and Vokrouhlický, David and Morbidelli, Alessandro},
 year={2007},
 month={Mar},
 pages={1962–1976}
+}
+
+@InBook{McKinnon2007,
+title={\href{http://dx.doi.org/10.1016/B978-012088589-3/50030-X}{Triton}},
+url={http://dx.doi.org/10.1016/B978-012088589-3/50030-X},
+DOI={10.1016/b978-012088589-3/50030-x},
+journal={Encyclopedia of the Solar System},
+publisher={Elsevier},
+author={McKinnon, W and Kirk, R},
+year={2007},
+pages={483–502}
 }
 
 @Article{Carry2008,
@@ -379,7 +418,7 @@ pages={A142}
 
 @InProceedings{McKinnon2012,
 author = {McKinnon, W. B.},
-title = {Where did Ceres accrete? },
+title = {\href{http://adsabs.harvard.edu/abs/2012LPICo1667.6475M}{Where did Ceres accrete?}},
 booktitle = {LPI Contrib},
 year = {2012},
 volume = {1667},
@@ -475,6 +514,19 @@ month={Mar},
 pages={72–75}
 }
 
+@Article{Rossi2014,
+title={\href{http://dx.doi.org/10.1051/0004-6361/201424275}{Pluto: improved astrometry from 19 years of observations}},
+volume={570},
+url={http://dx.doi.org/10.1051/0004-6361/201424275},
+DOI={10.1051/0004-6361/201424275},
+journal={Astronomy and Astrophysics},
+publisher={EDP Sciences},
+author={Benedetti-Rossi, G. and Vieira Martins, R. and Camargo, J. I. B. and others},
+year={2014},
+month={Oct},
+pages={A86}
+}
+
 @article{Olkin2015,
 title={\href{http://dx.doi.org/10.1016/j.icarus.2014.03.026}{Evidence that Pluto’s atmosphere does not collapse from occultations including the 2013 May 04 event}},
 volume={246},
@@ -489,12 +541,16 @@ pages={220–225}
 }
 
 @Article{GomesJunior2015-Ceres,
-author = {Gomes-Júnior, A. R. and Giacchini, B. L. and Braga-Ribas, F. and others},
-title = {\href{http://arxiv.org/abs/1504.04902}{Results of two multi-chord stellar occultations by dwarf planet (1) Ceres}},
-url = {http://arxiv.org/abs/1504.04902},
-journal = {Monthly Notices},
-note = {aceito},
-year = {2015},
+author = {Gomes-Júnior, A. R. and Giacchini, B. L. and Braga-Ribas, F. and others}, 
+title = {\href{http://mnras.oxfordjournals.org/content/451/3/2295.abstract}{Results of two multichord stellar occultations by dwarf planet (1) Ceres}},
+volume = {451}, 
+number = {3}, 
+pages = {2295-2302}, 
+year = {2015}, 
+doi = {10.1093/mnras/stv1081}, 
+url = {http://mnras.oxfordjournals.org/content/451/3/2295.abstract}, 
+eprint = {http://mnras.oxfordjournals.org/content/451/3/2295.full.pdf+html}, 
+journal = {Monthly Notices of the Royal Astronomical Society} 
 }
 
 @Article{GomesJunior2015-Irregular,
@@ -523,4 +579,17 @@ title = {Orbit determination of trans-Neptunian objects and Centaurs for the pre
 journal = {Astronomy and Astrophysics},
 note = {submetido},
 year = {2015},
+}
+
+@article{Nimmo2015,
+title={\href{http://dx.doi.org/10.1016/j.icarus.2014.01.044}{Powering Triton’s recent geological activity by obliquity tides: Implications for Pluto geology}},
+volume={246},
+url={http://dx.doi.org/10.1016/j.icarus.2014.01.044},
+DOI={10.1016/j.icarus.2014.01.044},
+journal={Icarus},
+publisher={Elsevier BV},
+author={Nimmo, F. and Spencer, J.R.},
+year={2015},
+month={Jan},
+pages={2–10}
 }
