--- a/qualify/Referencias.bib
+++ b/qualify/Referencias.bib
@@ -299,6 +299,20 @@ year={2007},
 pages={483–502}
 }
 
+@article{Assafin2008,
+title={\href{http://dx.doi.org/10.1016/j.pss.2007.05.030}{Instrumental and digital coronagraphy for the observation of the Uranus satellites’ upcoming mutual events}},
+volume={56},
+url={http://dx.doi.org/10.1016/j.pss.2007.05.030},
+DOI={10.1016/j.pss.2007.05.030},
+number={14},
+journal={Planetary and Space Science},
+publisher={Elsevier BV},
+author={Assafin, M. and Campos, R.P. and Vieira Martins, R. and others},
+year={2008},
+month={Nov},
+pages={1882–1887}
+}
+
 @Article{Carry2008,
 title={\href{http://dx.doi.org/10.1051/0004-6361:20078166}{Near-infrared mapping and physical properties of the dwarf-planet Ceres}},
 volume={478},
@@ -414,6 +428,20 @@ author={Assafin, M. and Camargo, J. I. B. and Vieira Martins, R. and others},
 year={2012},
 month={May},
 pages={A142}
+}
+
+@article{Lainey2012,
+title={\href{http://dx.doi.org/10.1088/0004-637X/752/1/14}{STRONG TIDAL DISSIPATION IN SATURN AND CONSTRAINTS ON ENCELADUS’ THERMAL STATE FROM ASTROMETRY}},
+volume={752},
+url={http://dx.doi.org/10.1088/0004-637X/752/1/14},
+DOI={10.1088/0004-637x/752/1/14},
+number={1},
+journal={ApJ},
+publisher={IOP Publishing},
+author={Lainey, Valéry and Karatekin, \"Ozg\"ur and Desmars, Josselin and others},
+year={2012},
+month={May},
+pages={14}
 }
 
 @InProceedings{McKinnon2012,
@@ -592,4 +620,12 @@ author={Nimmo, F. and Spencer, J.R.},
 year={2015},
 month={Jan},
 pages={2–10}
+}
+
+@Article{Camargo2015,
+author = {Camargo, J.I.B. and Magalhães, F.P. and Vieira-Martins, R. and others},
+title = {Astrometry of the main satellites of Uranus: 18 years of observations},
+journal = {Astronomy and Astrophysics},
+note = {submetido},
+year = {2015},
 }
